fix : Change struct to follow subjet + Class with heritage for Off/defensiveEquiepement