@@ -22,19 +22,32 @@ public class Game {
     public int maxPlayer = 2;
     public int maxCell = 4;
     public static int maxEnemies = 1;
-    public static int textOffset = 4;
-    public List<Character> playerList = new ArrayList<>();
-    public List<Enemy> enemyList = new ArrayList<>();
+    private static int maxPotion = 1;
+    public static int textOffset = 3;
     public Cell[] cellTable =  new Cell[maxCell];
+
     Random random = new Random();
 
     public void showData() {
-        for (Character player : playerList) {
-            player.getInfo();
+        for (int i = 0 ; i < cellTable.length - 1; i++)
+        {
+            Cell currentCell = cellTable[i];
+            if (!currentCell.players.isEmpty())
+                for (int y = 0; y < currentCell.players.size(); y++)
+                {
+                    cellTable[i].players.get(y).getInfo();
+                }
         }
-        for (Enemy enemy: enemyList) {
-            enemy.getInfo();
+        for (int i = 0 ; i < cellTable.length - 1; i++)
+        {
+            Cell currentCell = cellTable[i];
+            if (!currentCell.enemies.isEmpty())
+                for (int y = 0; y < currentCell.enemies.size(); y++)
+                {
+                    cellTable[i].enemies.get(y).getInfo();
+                }
         }
+        System.out.println("\n");
     }
 
     public void showCellsData(){
@@ -42,12 +55,16 @@ public class Game {
         {
             System.out.print("[");
             List<Character> players = cellTable[i].players;
-            List<Enemy> enemies = cellTable[i].ennemies;
+            List<Enemy> enemies = cellTable[i].enemies;
             for (int p = 0; p < players.size(); p++)
             {
                 if (p > 0)
                     System.out.print("|");
-                System.out.print(players.get(p).getName().substring(0, textOffset));
+                Character tmp = players.get(p);
+                if (tmp.getName().length() < textOffset)
+                    System.out.print(players.get(p).getName());
+                else
+                    System.out.print(players.get(p).getName().substring(0, textOffset));
             }
             if (!players.isEmpty() && !enemies.isEmpty())
                 System.out.print("|");
@@ -59,7 +76,7 @@ public class Game {
             }
             System.out.print("]");
         }
-        System.out.println("");
+        System.out.println("\n");
     }
 
     public void initCells() {
@@ -79,21 +96,58 @@ public class Game {
             {
                 case 1:
                     tmp = new Warrior(Enums.EntityType.Guerrier, name, i, cellTable[0]);
-                    playerList.add(tmp);
+                    //playerList.add(tmp);
                     cellTable[0].players.add(tmp);
                     break;
                 case  2:
                     tmp = new Wizard(Enums.EntityType.Mage, name, i, cellTable[0]);
-                    playerList.add(tmp);
+                    //playerList.add(tmp);
                     cellTable[0].players.add(tmp);
                     break;
             }
         }
     }
 
+    public Character getPlayerById(int id){
+        for (Cell cell : cellTable) {
+            for (Character player : cell.players)
+                if (player.getId() == id)
+                    return player;
+        }
+        return null;
+    }
+
     Enums.EntityType randomEnemyType() {
         Enums.EntityType[] types = { Enums.EntityType.Goblin, Enums.EntityType.Sorcier, Enums.EntityType.Dragon };
         return types[random.nextInt(types.length)];
+    }
+
+    Enums.Potion randomPotion() {
+        Enums.Potion[] types = {Enums.Potion.PotionPV, Enums.Potion.GrandPotionPV};
+        return types[random.nextInt(types.length)];
+    }
+
+    public  void initPotion()
+    {
+        for (int i = 0; i < maxPotion; i++)
+        {
+            int cellIndex = 1;
+            Enemy tmp = null;
+            switch (randomEnemyType()) {
+                case Enums.EntityType.Goblin:
+                    tmp = new Goblin();
+                    cellTable[cellIndex].addEnemy(tmp);
+                    break;
+                case Enums.EntityType.Sorcier:
+                    tmp = new Sorcier();
+                    cellTable[cellIndex].addEnemy(tmp);
+                    break;
+                case Enums.EntityType.Dragon:
+                    tmp = new Dragon();
+                    cellTable[cellIndex].addEnemy(tmp);
+                    break;
+            }
+        }
     }
 
     public void initEnemies() {
@@ -106,18 +160,15 @@ public class Game {
             switch (randomEnemyType()) {
                 case Enums.EntityType.Goblin:
                     tmp = new Goblin();
-                    cellTable[cellIndex].addEnnemy(tmp);
-                    this.enemyList.add(tmp);
+                    cellTable[cellIndex].addEnemy(tmp);
                     break;
                 case Enums.EntityType.Sorcier:
                     tmp = new Sorcier();
-                    cellTable[cellIndex].addEnnemy(tmp);
-                    this.enemyList.add(tmp);
+                    cellTable[cellIndex].addEnemy(tmp);
                     break;
                 case Enums.EntityType.Dragon:
                     tmp = new Dragon();
-                    cellTable[cellIndex].addEnnemy(tmp);
-                    this.enemyList.add(tmp);
+                    cellTable[cellIndex].addEnemy(tmp);
                     break;
             }
 
@@ -132,13 +183,12 @@ public class Game {
     }
 
     public String requestInput() {
+        System.out.print(">");
         String text = sc.nextLine();
-
         return text;
     }
 
-    public void checkBattle(Character player, Enemy enemy)
-    {
+    public void checkBattle(Character player, Enemy enemy) {
         enemy.setHp(enemy.getHp() - player.getDmg());
     }
 
@@ -146,21 +196,23 @@ public class Game {
     this.maxPlayer = nb;
     }
 
-    public void updateGame() {
-        Character player = playerList.get(currentPlayer);
+    public void playTurn() {
+        Character player = getPlayerById(currentPlayer);
         if (player.getPos() == 62) {
             gameState = Enums.GameState.Finish;
-            System.out.println("Joueur " + player.getName() + " le "+ player.getType() + " à atteinds la dernière case");
+            System.out.println("Joueur " + player.getName() + " le "+ player.getType() + " à atteinds la dernière case.");
         }
         else
-            System.out.println("Tour de " + player.getName());
+            System.out.println("Tour de " + player.getName() + " le " + player.getType() + ".\n");
         switch (gameState) {
             case Idle:
-                System.out.println("1) Lancer de dée | 2) Utiliser potion");
+                System.out.println("1) Lancer de dée\n2) Utiliser potion");
                 String inputText = requestInput();
                 if (inputText.equals("1")) {
                     int dice = throwDice();
                     player.moveAvailable = dice;
+                    System.out.println(player.getName() + " à fait un lancer de dée de " + dice);
+                    requestInput();
                     gameState = Enums.GameState.Moving;
                 }
                 /*else if (requestInput().equals("2")) {
@@ -173,20 +225,25 @@ public class Game {
                 }
                 else {
                     System.out.println("Choix invalide");
-                    updateGame();
+                    playTurn();
                 }
                 break;
             case Moving:
-                System.out.println("Entrer) Avance de " + playerList.get(currentPlayer).moveAvailable + " case");
+                if (player.moveAvailable == 0)
+                {
+                    gameState = Enums.GameState.End;
+                    break;
+                }
+                System.out.println("Déplacement disponible : " + player.moveAvailable + ".\n");
+                System.out.println("Entrer) Avance de " + player.moveAvailable + " case");
                 int pPos = player.getPos();
                 if (requestInput().equals("")) {
                     if (player.moveAvailable > 0 && pPos + player.moveAvailable < maxCell - 1) {
                         player.moveEntityToCell(cellTable[pPos], cellTable[pPos + 1]);
                         player.moveAvailable--;
-                        if (!cellTable[player.getPos()].isEnnemiesEmpty())
+                        if (!cellTable[player.getPos()].isEnemiesEmpty())
                             gameState = Enums.GameState.InBattle;
-                        else if (player.moveAvailable == 0)
-                            gameState = Enums.GameState.End;
+
                     }
                     else if (pPos + player.moveAvailable > maxCell - 1) {
                         player.moveEntityToCell(cellTable[pPos], cellTable[maxCell - 1]);
@@ -194,21 +251,40 @@ public class Game {
                 }
                 break;
             case InBattle:
-                Enemy enemy = cellTable[player.getPos()].ennemies.get(0);
-                System.out.println("Joueur " + player.getName() + " le " + player.getType() + " tombe sur " + enemy.getName());
+                Enemy enemy = cellTable[player.getPos()].enemies.getFirst();
+                System.out.println("Joueur " + player.getName() + " le " + player.getType() + " tombe sur " + enemy.getName()+ "\n");
                 System.out.println("Joueur  : " + player.getName() + " le " + player.getType() + " PV : " + player.getHp() + " Dégats : " + player.getDmg());
-                System.out.println("Ennemie : " + enemy.getName() + " PV : " + player.getHp() + " Dégats : " + player.getDmg());
+                System.out.println("Ennemie : " + enemy.getName() + " PV : " + player.getHp() + " Dégats : " + player.getDmg() + "\n");
+                System.out.println("Entrer) Pour attaquer.");
                 requestInput();
                 checkBattle(player, enemy);
-                if (enemy.getHp() < 0)
+                System.out.println(player.getName() + " attaque " + enemy.getName());
+                System.out.println(player.getName() + " inflige " + player.getDmg() + " à " + enemy.getName() + " PV restant " + enemy.getHp());
+                enemy.setHp(enemy.getHp() - player.getDmg());
+                if (enemy.getHp() < 0) {
+                    System.out.println(enemy.getName() + " est mort.\n");
+                    cellTable[player.getPos()].enemies.remove(enemy);
+                }
+                else
+                {
+                    System.out.println(enemy.getName() + " atttaque !");
+                    System.out.println(enemy.getName() + " inflige " + enemy.getDmg() + " à " + player.getName() + " PV restant " + player.getHp());
+                    System.out.println(enemy.getName() + " s'enfuit !\n");
+                    cellTable[player.getPos()].enemies.remove(enemy);
+
+                }
+                System.out.println("Entrer) Fin de combat");
+                requestInput();
+                gameState = Enums.GameState.Moving;
                 break;
             case End:
-                System.out.println("Enter) Fin de tour du joueur : " + player.getName() + " le " + player.getEntityType());
+                System.out.println("Enter) Fin de tour de " + player.getName() + " le " + player.getEntityType());
                 requestInput();
-                gameState = Enums.GameState.Idle;
-                currentPlayer++;
-                if (currentPlayer > playerList.size() - 1)
+                if (currentPlayer < maxPlayer - 1)
+                    currentPlayer++;
+                else
                     currentPlayer = 0;
+                gameState = Enums.GameState.Idle;
                 break;
             case Finish:
                 System.out.println("Fin du jeu");
